WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134714
Pass RenderLayer reference instead of pointer to RenderLayer::paintingExtent().
https://bugs.webkit.org/show_bug.cgi?id=134714
Summary
Pass RenderLayer reference instead of pointer to RenderLayer::paintingExtent().
alan
Reported
2014-07-07 19:29:32 PDT
and use that reference in paintingExtent()'s dependencies.
Attachments
Patch
(13.50 KB, patch)
2014-07-07 19:36 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2014-07-07 19:36:11 PDT
Created
attachment 234537
[details]
Patch
WebKit Commit Bot
Comment 2
2014-07-07 20:22:28 PDT
Comment on
attachment 234537
[details]
Patch Clearing flags on attachment: 234537 Committed
r170873
: <
http://trac.webkit.org/changeset/170873
>
WebKit Commit Bot
Comment 3
2014-07-07 20:22:31 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug